--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
                                             <div class="form-group col-4">
                                                 <div class="form-group__text">
                                                     <input name="userid" id="userid" type="text" value="userid" onfocus="if(this.value == 'userid'){this.value = '';}">
-                                                    <label for="input-type-text">New Space Moderator (CEC user ID)</label>
+                                                    <label for="input-type-text">Your Present User ID</label>
                                                 </div>
                                             </div>
                                         </div>
